# tictactoe-py

./: .gitignore  Pipfile  README.md  install.sh  pytest.ini  setup.cfg  setup.py  test.sh  tictactoe.py
src/: computer_player.py  game.py
tests/: computer_player_test.py  game_test.py  test_computer_player.py  test_game.py  tictactoe_test.py
