[metadata]
name = tictactoe
version = 1.0.0
description = Plays tic-tac-toe
long_description = file: README.md
long_description_content_type = text/markdown

packages = find:
python_requires = >=3.8
install_requires =


[tool:pytest]
addopts = -ra -q
minversion = 6.0
testpaths =
    tests

[mypy]
ignore_missing_imports = True
